# for-each-dir

./: CHANGELOG.md  Cargo.toml  README.md  THIRDPARTY.md
.github/workflows/: release-please.yml
src/: main.rs
