[package]
name = "for-each-dir"
version = "0.1.0"
authors = ["Jani Ojanen <jajuojan@gmail.com>"]
edition = "2021"
readme = "README.md"
description=""
repository = "https://github.com/jajuojan/for-each-dir"
license = "MIT"

[dependencies]
clap = { version = "4.0.11", features = ["derive"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
